--- a/requirements.txt
+++ b/requirements.txt
@@ -7,20 +7,23 @@ configparser==3.5.0
 cryptography==2.3.1
 Flask==1.0.2
 Flask-Cors==3.0.6
+Flask-RESTful==0.3.6
 idna==2.7
 isort==4.3.4
 itsdangerous==0.24
-Jinja2==2.10
+Jinja2==2.10.3
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
-Pillow==5.2.0
+Pillow==6.2.1
 psycopg2-binary==2.7.5
 pycparser==2.18
 pylint==2.1.1
 pyOpenSSL==18.0.0
 pytz==2018.5
 six==1.11.0
+style==1.1.0
 typed-ast==1.1.0
-Werkzeug==0.14.1
+update==0.0.1
+Werkzeug==0.16.0
 wrapt==1.10.11
